--- a/SubPub/index.html
+++ b/SubPub/index.html
@@ -4,12 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>MVVM</title>
+  <title>Document</title>
 </head>
 <body>
-  <script src="./observer.js"></script>
-  <script src="./watcher.js"></script>
-  <script src="./compile.js"></script>
-  <script src="./vue.js"></script>
+  
 </body>
 </html>
