feat(mediator): 新增中介者模式

--- a/Observer/index.html
+++ b/Observer/index.html
@@ -22,7 +22,7 @@
   <script src="./observer.js"></script>
   <script src="./watcher.js"></script>
   <script src="./compile.js"></script>
-  <script src="./vue.js"></script>
+  <script src="./mvvm.js"></script>
 
   <script>
     var vm = new MVVM({
