--- a/PubSub/index.html
+++ b/PubSub/index.html
@@ -9,5 +9,9 @@
 <body>
 
   <script src="./mediator.js"></script>
+  <script src="./viewModel.js"></script>
+  <script src="./view.js"></script>
+  <script src="./model.js"></script>
+  <script src="./mvvm.js"></script>
 </body>
 </html>
