--- a/PubSub/index.html
+++ b/PubSub/index.html
@@ -8,20 +8,27 @@
 </head>
 <body>
   <div id="app">
-    <input type="text" c-bind="message">
+    <input type="text" b-value="html.message" b-on:click="handlerClick">
+    {{ message }}
   </div>
-
-  <script src="./binder.js"></script>
   <script src="./mediator.js"></script>
   <script src="./viewModel.js"></script>
+  <script src="./binder.js"></script>
   <script src="./view.js"></script>
-  <script src="./model.js"></script>
   <script src="./mvvm.js"></script>
   <script>
     let vm = new MVVM({
       el: '#app',
       data: {
-        message: 'Hello World!'
+        message: 'Hello World!',
+        html: {
+          message: 'Hello Html!'
+        }
+      },
+      methods: {
+        handlerClick(e) {
+          console.log(e)
+        }
       }
     })
   </script>
