feat(event.js): 新增event处理接口

--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
 </head>
 <body>
   <div id="app">
-    <input type="text" b-value="html.message" b-on:click="handlerClick">
+    <input type="text" b-value="html.message" b-on-click="handlerClick">
     {{ message }}
   </div>
+  <script src="./mixin.js"></script>
+  <script src="./event.js"></script>
   <script src="./mediator.js"></script>
-  <script src="./viewModel.js"></script>
   <script src="./binder.js"></script>
   <script src="./view.js"></script>
   <script src="./mvvm.js"></script>
