feat(browser): 新增val、text、html方法

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     <div b-html="htmlMessage"></div>
   </div>
   <script src="./mixin.js"></script>
-  <script src="./event.js"></script>
+  <script src="./browser.js"></script>
   <script src="./mediator.js"></script>
   <script src="./binder.js"></script>
   <script src="./view.js"></script>
