feat(hijack): 新增数据劫持对象

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
   <script src="./mediator.js"></script>
   <script src="./binder.js"></script>
   <script src="./view.js"></script>
+  <script src="./hijack.js"></script>
   <script src="./mvvm.js"></script>
   <script>
     let vm = new MVVM({
@@ -34,6 +35,8 @@
         }
       }
     })
+
+    console.log(vm)
   </script>
 </body>
 </html>
