--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
   <div id="app">
-    <input type="text" b-value="input.message" b-on-click="handlerClick">
+    <input type="text" b-value="input.message" b-on-input="handlerInput">
     <div>{{ input.message }}</div>
-    <div b-text="input.message"></div>
+    <div b-text="text"></div>
     <div b-html="htmlMessage"></div>
   </div>
   <script src="./mixin.js"></script>
@@ -27,11 +27,12 @@
         input: {
           message: 'Hello Input!'
         },
+        text: 'ziyi2',
         htmlMessage: '<button>提交</button>'
       },
       methods: {
-        handlerClick(e) {
-          console.log(e)
+        handlerInput(e) {
+          this.text = e.target.value
         }
       }
     })
