refactor(demo): 优化示例

--- a/mvvm/index.html
+++ b/mvvm/index.html
@@ -7,6 +7,7 @@
   <title>Document</title>
 </head>
 <body>
+  <h1>mvvm演示</h1>
   <div id="app">
     <input type="text" b-value="input.message" b-on-input="handlerInput">
     <div>{{ input.message }}</div>
