--- a/src/viewModel/index.html
+++ b/src/viewModel/index.html
@@ -7,6 +7,7 @@
   <title>Document</title>
 </head>
 <body>
+  <h1>ViewModel演示</h1>
   <div id="app">
     <input type="text" id="input1" b-value="message">
     <input type="text" id="input2" b-value="message">
@@ -57,7 +58,7 @@
     new View('#app', model, mediator)
 
     // model -> view
-    model.message = 'Hello Ziyi2'
+    model.message = 'Hello Ziyi233333222'
     
   </script>
 </body>
